test/semant/negative_controls/buggy_progs/duplicate-decl.con
concept test
purpose "something"
state
  x : Int
  x : Int
actions
  a()
principle
